# software-formularios-mirai-tech

./: .coveragerc  .env.example  .gitignore  Dockerfile  Gestao_Risco_UFSM.postman_collection.json  INSTRUCOES.md  README.md  docker-compose.yml  manage.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: build-linter.yml  documentation.yml  tests.yml
docs/: api.md  arquitetura.md  banco-de-dados.md  design-prototipo.md  exemplos-casos-de-uso.md  frontend.md  index.md  instalacao.md  testes.md
docs/design/: design.md
docs/esquema-banco/: schema-sql.md  schema.sql
docs/javascripts/: mermaid-init.js
docs/stylesheets/: extra.css
src/frontend/: eslint.config.js  index.html  package-lock.json  package.json
src/frontend/src/: App.jsx
src/gestao_risco/: asgi.py  settings.py  urls.py  wsgi.py
src/riscos/: apps.py  exporters.py  models.py  serializers.py  urls.py  views.py
src/riscos/migrations/: 0001_initial.py  0002_alter_planoacao_observacoes_and_more.py  0003_seed_pdi_inicial.py  0004_alter_desafiopdi_options_alter_macroprocesso_options_and_more.py  0005_add_soft_delete.py  0006_add_uuid_risco.py  0007_add_progresso_historico.py
src/riscos/tests/: test_models.py  test_seed_data.py  test_views.py
src/usuarios/: admin.py  apps.py  importacao_unidades.py  models.py  normalizacao_legado.py  serializers.py  urls.py  views.py
tests/: conftest.py
tests/integration/: test_dashboard_fluxo_risco.py  test_exportacoes_fluxo.py  test_gerencial_fluxo.py  test_mapa_fluxo_risco.py  test_recuperacao_senha_fluxo.py
(+80 files in other folders)
