[project]
name = "gestao-risco-ufsm"
version = "0.1.0"
description = "Sistema de Gestão de Riscos UFSM"
authors = [
    { name = "UFSM Engineering Team" }
]
dependencies = [
    "django>=5.1",
    "psycopg2-binary>=2.9.9",
    "djangorestframework>=3.15.2",
    "django-cors-headers>=4.4.0",
    "python-dotenv>=1.0.1",
    "whitenoise>=6.7.0",
]
requires-python = ">=3.11"

[tool.uv]
managed = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
